--- a/package.json
+++ b/package.json
@@ -46,11 +46,9 @@
   "dependencies": {
     "@casl/ability": "^6.5.0",
     "@emotion/cache": "^11.6.0",
-    "@emotion/react": "^11.7.0",
     "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.6.0",
     "@mui/lab": "^5.0.0-alpha.70",
-    "@mui/material": "^5.4.3",
+    "@mui/x-data-grid": "^6.15.0",
     "@popperjs/core": "^2.11.2",
     "apexcharts-clevision": "3.28.5",
     "axios": "^1.5.0",
