--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "materio-mui-react-nextjs-admin-template-free",
+  "name": "sistema_de_visitas",
   "description": "Most Powerful & Comprehensive Free MUI React NextJS Admin Dashboard Template built for developers! 🚀",
   "license": "MIT",
   "version": "1.0.0",
