--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
   "dependencies": {
     "@casl/ability": "^6.5.0",
     "@emotion/cache": "^11.6.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.11.0",
     "@mui/lab": "^5.0.0-alpha.70",
+    "@mui/material": "^5.14.11",
     "@mui/x-data-grid": "^6.15.0",
     "@popperjs/core": "^2.11.2",
     "apexcharts-clevision": "3.28.5",
@@ -57,10 +60,10 @@
     "next": "12.0.4",
     "npm": "^10.1.0",
     "nprogress": "^0.2.0",
-    "react": "17.0.2",
+    "react": "^17.0.0 || ^18.0.0",
     "react-apexcharts": "^1.3.9",
     "react-datepicker": "^4.18.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.2.5",
     "react-select": "^5.7.5"
